maze.lessons.maze.wallfollower.WallFollowerMaze.scala.error
Escaper:1: error: Missing closing brace `}' assumed here
def keepHandOnSideWall() {
^Escaper:1: error: expected class or object definition
def keepHandOnSideWall() {
^